# Nuri

./: .env.example  .gitignore  .vercelignore  README.md  app.py  design_guidelines.json  pyproject.toml  render.yaml  replacements.txt  requirements.txt  start.bat  test_result.md  vercel.json
.emergent/: emergent.yml
.github/: copilot-instructions.md
.github/workflows/: deploy-vercel.yml
backend/: auth.py  main.py  server.py
backend/golden_agent/: eval_compare.py
backend/tests/: test_iter2_detail_fav.py  test_iter4_onboarding.py  test_iter5_tasks.py  test_iter7_nuri_convo.py
doc/: codex_mac_handoff.md  family_growth_radar_prd_v0_1.docx  family_growth_radar_prd_v0_1.md  ordash_family_growth_handoff_2026-05-30.md  project_handoff_zh.md
frontend/: .gitignore  FRONTEND_PREVIEW.md  package-lock.json  package.json
frontend/app/: +html.tsx  _layout.tsx  admin.tsx  community.tsx  index.tsx  login.tsx  onboarding.tsx  register.tsx
frontend/backend/: auth.py  server.py
frontend/src/: api.ts  preview-api.ts  taskMeta.ts  theme.ts
memory/: PRD.md
supabase/: add_collections_migration.sql  add_email_logs_migration.sql  app_data.sql  books.sql  ensure_email_unique.sql  fix_rls_migration.sql  memory_migration.sql  onboarding_fields_migration.sql  rag_vectors.sql  remove_render_migration.sql  tasks_richness_migration.sql
test_reports/: iteration_1.json  iteration_2.json  iteration_3.json  iteration_4.json  iteration_5.json  iteration_6.json  iteration_7.json  iteration_8.json
test_reports/pytest/: iter3_auth.xml  iter4_onboarding.xml  iter5_tasks.xml  (+2 more)
(+17 files in other folders)
