[project]
name = "family-growth-radar"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn",
  "openai",
  "pinecone[grpc]",
  "pypdf",
  "python-multipart",
  "python-dotenv",
  "anyio",
  "pyjwt",
  "bcrypt",
  "email-validator",
]

[tool.vercel]
entrypoint = "api.backend:app"
